feat: add forgot password, reset and not found problem
